--- a/silverpi/package.json
+++ b/silverpi/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@supabase/auth-helpers-nextjs": "^0.8.1",
+    "@supabase/supabase-js": "^2.38.3",
     "@tailwindcss/forms": "^0.5.6",
     "next": "13.5.6",
     "react": "^18",
