--- a/silverpi/package.json
+++ b/silverpi/package.json
@@ -14,7 +14,7 @@
     "@supabase/auth-helpers-nextjs": "^0.8.1",
     "@supabase/supabase-js": "^2.38.3",
     "@tailwindcss/forms": "^0.5.6",
-    "next": "^14.0.2-canary.6",
+    "next": "^14.0.1",
     "react": "^18",
     "react-dom": "^18",
     "zod": "^3.22.4"
