--- a/silverpi/.env.local.dev
+++ b/silverpi/.env.local.dev
@@ -1,2 +1,8 @@
 NEXT_PUBLIC_SUPABASE_URL=your-supabase-url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
+VISTA_DB_API_KEY=api-key-here
+VISTA_DB_API_ID=api-id-username-here
+VISTA_DB_PORT=port
+VISTA_DB_URL=url-with-no-https-here
+VISTA_DB_GRAPHQL_LOCATION=location-here
+VISTA_DB_TOKEN_LOCATION=location-here
