got the token and api response working, now able to make requests and get data

--- a/silverpi/jsconfig.json
+++ b/silverpi/jsconfig.json
@@ -1,7 +1,9 @@
 {
   "compilerOptions": {
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@/api/*": ["./src/app/api/*"],
+      "@/helpers/*": ["./src/app/helpers/*"],
     }
   }
 }
