working on figuring out all this ssr crap, nextjs so confusing

--- a/silverpi/.env.local.dev
+++ b/silverpi/.env.local.dev
@@ -6,3 +6,4 @@ VISTA_DB_PORT=port
 VISTA_DB_URL=url-with-no-https-here
 VISTA_DB_GRAPHQL_LOCATION=location-here
 VISTA_DB_TOKEN_LOCATION=location-here
+SUPABASE_SERVICE_KEY=key-here
