working on company stuff, added company dropdown, switching over to joes table component

--- a/silverpi/jsconfig.json
+++ b/silverpi/jsconfig.json
@@ -3,6 +3,7 @@
     "paths": {
       "@/*": ["./src/*"],
       "@/api/*": ["./src/app/api/*"],
+      "@/components/*": ["./src/app/components/*"],
       "@/helpers/*": ["./src/app/helpers/*"],
     }
   }
