--- a/silverpi/package.json
+++ b/silverpi/package.json
@@ -20,6 +20,7 @@
     "next": "^14.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^9.1.0",
     "react-table": "^7.8.0",
     "zod": "^3.22.4"
   },
