--- a/silverpi/package.json
+++ b/silverpi/package.json
@@ -14,6 +14,7 @@
     "@supabase/auth-helpers-nextjs": "^0.8.1",
     "@supabase/supabase-js": "^2.38.4",
     "@tailwindcss/forms": "^0.5.6",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
