--- a/silverpi/package.json
+++ b/silverpi/package.json
@@ -13,7 +13,8 @@
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
-    "@mui/material": "^5.15.7",
+    "@mui/icons-material": "^5.15.9",
+    "@mui/material": "^5.15.9",
     "@supabase/auth-helpers-nextjs": "^0.8.1",
     "@supabase/supabase-js": "^2.38.4",
     "@tailwindcss/forms": "^0.5.6",
