--- a/silverpi/package.json
+++ b/silverpi/package.json
@@ -21,6 +21,7 @@
     "next": "^14.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-table": "^7.8.0",
     "react-toastify": "^10.0.4",
     "zod": "^3.22.4"
